--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -40,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">gCamp</a>
+          <a class="navbar-brand" href="#"><%= link_to "gCamp", root_path %></a>
         </div>
         <div class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form">
@@ -50,65 +49,15 @@
     </div>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>gCamp</h1>
-        <p>Your world, organized.</p>
-      </div>
-    </div>
 
-    <div class="container">
+    <br>
 
+    <footer>
 
-      <div class="row">
-        <div class="col-md-4">
-          <img src="https://farm6.staticflickr.com/5487/10593863736_6c1f11f635_n.jpg">
-            <div class="panel panel-default">
+      <%= link_to "about", two_path %>
+      <%= link_to "terms", three_path %>
 
-            <div class= "panel heading"><h2>Tasks</h2></div>
-          <p>Grouped by projects and lists, just the way you like 'em.</p>
-
-        </div>
-
-      </div>
-
-
-        <div class="col-md-4">
-            <img src="https://farm9.staticflickr.com/8482/8203794182_8004f8f636_n.jpg">
-              <div class="panel panel-default">
-
-                <div class= "panel heading"><h2>Documents</h2></div>
-          <ul>
-          <li>Upload</li>
-          <li>Comment</li>
-          <li>Revise</li>
-          </ul>
-
-          </li>
-              </div>
-
-       </div>
-        <div class="col-md-4">
-
-
-          <img src="https://farm8.staticflickr.com/7378/9325995752_e4b4d0044a_n.jpg" class="img-responsive">
-            <div class="panel panel-default">
-
-          <div class= "panel heading"><h2>Comments</h2></div>
-            <ul>
-              <li>Comments on tasks and documents</li>
-              <li>Get email notifications</li>
-            </ul>
-          </div>
-
-        </div>
-      </div>
-
-      <hr>
-
-
-    </div> <!-- /container -->
-
+    </footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
