--- a/app/views/addpages/two.erb
+++ b/app/views/addpages/two.erb
@@ -1,6 +1,6 @@
 
 <div class="jumbotron text-center">
-  <h1>About Page</h1>
+  <h1>About</h1>
     <p>Get organized and increase productivity with your team</p>
 <%= image_tag"meeting.png" %>
 </div>
