--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><%= link_to "gCamp", root_path %></a>
+          <%= link_to "gCamp", root_path, id:"gCamphome" %>
         </div>
         <div class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form">
@@ -53,10 +53,12 @@
     <br>
 
     <footer>
+      <div class = "container">
 
       <%= link_to "about", two_path %>
       <%= link_to "terms", three_path %>
 
+    </div>
     </footer>
 
     <!-- Bootstrap core JavaScript
