stretch goal of dividing author name and graying it out

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -54,14 +54,14 @@
 
     <% quotes = [
 
-      ["Failure is not an option", "Bob"],
-      ["Success please", "Me"],
-      ["Win everything!", "Stan"]
+      ["Failure is not an option", "-Bob"],
+      ["Success please", "-Me"],
+      ["Win everything!", "-Stan"]
 
     ] %>
 
       <% quotes.each do |quote| %>
-        <p>"<%= quote[0]%>" <%= quote[1]%></p>
+        <p>"<%= quote[0]%>" <p class="Authors"><%= quote[1]%></p></p>
     <% end %>
 
 
