--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -5,6 +5,10 @@
   font-size: 30px;
 }
 
+.Authors {
+  color:gray;
+}
+
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
