refactored quotes into the controller

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -52,17 +52,9 @@
     </div>
   </div>
 
-    <% quotes = [
-
-      ["Failure is not an option", "-Bob"],
-      ["Success please", "-Me"],
-      ["Win everything!", "-Stan"]
-
-    ] %>
-
-      <% quotes.each do |quote| %>
+      <% @quotes.each do |quote| %>
         <p>"<%= quote[0]%>" <p class="Authors"><%= quote[1]%></p></p>
-    <% end %>
+      <% end %>
 
 
   <hr>
