Added FAQ page and FAQ link in footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,8 +55,9 @@
     <footer>
       <div class = "container">
 
-      <%= link_to "about", two_path %>
-      <%= link_to "terms", three_path %>
+      <%= link_to "About", two_path %>
+      <%= link_to "Terms", three_path %>
+      <%= link_to "FAQ", four_path %>
 
     </div>
     </footer>
