--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,29 +29,26 @@
   </head>
 
   <body>
-<%= yield %>
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <%= link_to "gCamp", root_path, id:"gCamphome" %>
-        </div>
-        <div class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right" role="form">
-
-        </div><!--/.navbar-collapse -->
+  <div class="navbar navbar-inverse" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <%= link_to "gCamp", root_path, id:"gCamphome" %>
       </div>
+      <div class="navbar-collapse collapse">
+        <form class="navbar-form navbar-right" role="form">
+
+      </div><!--/.navbar-collapse -->
     </div>
+  </div>
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-
+  <%= yield %>
     <br>
-
     <footer>
       <div class = "container">
 
