Fixed about page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,6 +9,14 @@
   color:gray;
 }
 
+.aboutpage {
+  padding:50px;
+}
+
+.about {
+  background-color:white;
+}
+
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
