--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,9 +51,9 @@
     <br>
     <footer>
       <div class = "container">
-
-      <%= link_to "About", two_path %>
-      <%= link_to "Terms", three_path %>
+        <hr>
+      <%= link_to "About", two_path %> |
+      <%= link_to "Terms", three_path %> |
       <%= link_to "FAQ", four_path %>
 
     </div>
