--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,9 +52,9 @@
     <footer>
       <div class = "container">
         <hr>
-      <%= link_to "About", two_path %> |
-      <%= link_to "Terms", three_path %> |
-      <%= link_to "FAQ", four_path %>
+      <%= link_to_unless_current "About", two_path %> |
+      <%= link_to_unless_current "Terms", three_path %> |
+      <%= link_to_unless_current "FAQ", four_path %>
 
     </div>
     </footer>
