--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -15,6 +15,13 @@
     <%= f.label :description %><br>
     <%= f.text_field :description %>
   </div>
+
+  <div class="complete">
+    <%= f.label :checkbox, "Complete" %>
+    <%= f.check_box :complete %>
+  </div>
+
+  
   <div class="actions">
     <%= f.submit %>
   </div>
