--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -22,4 +22,4 @@
 
 <br>
 
-<div class= "btn btn-info"<%= link_to 'Create Task', new_task_path %></div>
+<%= link_to 'Create Task', new_task_path, class: "btn btn-info"%>
