--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -16,12 +16,13 @@
     <%= f.text_field :description %>
   </div>
 
-  <div class="complete">
-    <%= f.label :checkbox, "Complete" %>
+  <% unless current_page?(new_task_path) %>
+    <%= f.label :complete %>
     <%= f.check_box :complete %>
-  </div>
 
-  
+  <% end %>
+
+
   <div class="actions">
     <%= f.submit %>
   </div>
