--- a/app/views/addpages/three.erb
+++ b/app/views/addpages/three.erb
@@ -1,5 +1,5 @@
 
-<div class="jumbotron text-left">
+<div class="container">
   <h1>Terms and Conditions</h1>
     <p>gCamp is not responsible for anything unless it is positive</p>
 <br>
