Added date option in update tasks

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -22,9 +22,10 @@
 
   <% end %>
 
-  <%div class="due">
-    <%= f.label :date %>
-    <%= f
+  <div class="due">
+    <%= f.label :due %>
+    <%= f.date_field :due %>
+
 
 
   <div class="actions">
