--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -16,7 +16,7 @@
     <%= f.text_field :description %>
   </div>
 
-  <% unless current_page?(new_task_path) %>
+  <% if !current_page?(new_task_path) %>
     <%= f.label :complete %>
     <%= f.check_box :complete %>
 
