--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -5,6 +5,15 @@
   <%= @task.description %>
 </p>
 
+<p>
+  <strong>Date:</strong>
+  <%= @task.due %>
+</p>
+
+<p>
+  <strong>Complete:</strong>
+  <%= @task.due %>
+</p>
 
 
 <%= link_to 'Edit', edit_task_path(@task) %> |
