--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -12,9 +12,9 @@
     <% @tasks.each do |task| %>
       <tr>
         <td><%= task.description %></td>
-          <td><%= link_to 'Destroy', task, method: :delete %></td>
-          <td><%= link_to 'Edit', edit_task_path(task) %></td>
-          <td><%= link_to 'Show', task %></td>
+          <td class="btn btn-danger pull-right"><%= link_to 'Destroy', task, method: :delete %></td>
+          <td class="btn btn-primary pull-right"><%= link_to 'Edit', edit_task_path(task) %></td>
+          <td class="btn btn-success pull-right"><%= link_to 'Show', task %></td>
       </tr>
     <% end %>
   </tbody>
