--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,9 +29,9 @@
     <footer>
       <div class = "container">
         <hr>
-      <%= link_to_unless_current "About", two_path %> |
-      <%= link_to_unless_current "Terms", three_path %> |
-      <%= link_to_unless_current "FAQ", four_path %>
+      <%= link_to_unless_current "About", about_path %> |
+      <%= link_to_unless_current "Terms", terms_path %> |
+      <%= link_to_unless_current "FAQ", faq_path %>
     </div>
     </footer>
     <%= javascript_include_tag 'application' %>
