--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -11,10 +11,11 @@
   <tbody>
     <% @tasks.each do |task| %>
       <tr>
-        <td><%= task.description %></td>
-          <td class="btn btn-danger pull-right"><%= link_to 'Destroy', task, method: :delete %></td>
-          <td class="btn btn-primary pull-right"><%= link_to 'Edit', edit_task_path(task) %></td>
-          <td class="btn btn-success pull-right"><%= link_to 'Show', task %></td>
+        <td width="100%"><%= task.description %></td>
+
+          <td><%= link_to 'Show', task, class: "btn btn-success pull-right" %></td>
+          <td><%= link_to 'Edit', edit_task_path(task), class: "btn btn-primary pull-right" %></td>
+          <td><%= link_to 'Destroy', task, class: "btn btn-danger pull-right", method: :delete %></td>
       </tr>
     <% end %>
   </tbody>
