--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,26 +1,29 @@
-<h1 class="page-header">Tasks</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @tasks.each do |task| %>
+<div class="container">
+  <h1 class="page-header">Tasks</h1>
+  <table class="table">
+    <thead>
       <tr>
-        <td width="100%"><%= task.description %></td>
-
-          <td><%= link_to 'Show', task, class: "btn btn-success pull-right" %></td>
-          <td><%= link_to 'Edit', edit_task_path(task), class: "btn btn-primary pull-right" %></td>
-          <td><%= link_to 'Destroy', task, class: "btn btn-danger pull-right", method: :delete %></td>
+        <th>Description</th>
+        <th>Due Date</th>
+        <th>Completed</th>
+        <th></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
-
-<%= link_to 'Create Task', new_task_path, class: "btn btn-info"%>
+    <tbody>
+      <% @tasks.each do |task| %>
+        <tr>
+            <td><%= task.description %></td>
+            <td><%= task.due %></td>
+            <td><%= task.complete %></td>
+            <td class="form-actions">
+              <%= link_to 'Show', task, class: "btn btn-success" %>
+              <%= link_to 'Edit', edit_task_path(task), class: "btn btn-primary" %>
+              <%= link_to 'Destroy', task, class: "btn btn-danger", method: :delete %>
+            </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <%= link_to 'Create Task', new_task_path, class: "btn btn-info"%>
+</div>
