--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,6 +17,10 @@
   background-color:white;
 }
 
+.icons {
+  
+}
+
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
