--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,19 @@
 <%= link_to 'Create User', new_user_path, class: "btn btn-info"%>
 
+     <table class="table">
+       <thead>
+         <tr>
+           <th>Name</th>
+           <th>Email</th>
+         </tr>
+       </thead>
 
-
-<div class="container">
-  <h1 class="page-header">Users</h1>
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Email</th>
-
-      </tr>
-    </thead>
+       <tbody>
+         <% @users.each do |user| %>
+           <tr>
+               <td><%= user.first_name %><%= user.last_name %></td>
+               <td><%= user.email_address %></td>
+           </tr>
+         <% end %>
+       </tbody>
+     </table>
