Added working edit button to users

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,9 @@
       <%= link_to_unless_current "About", about_path %> |
       <%= link_to_unless_current "Terms", terms_path %> |
       <%= link_to_unless_current "FAQ", faq_path %> |
+      <%= link_to_unless_current "Tasks", tasks_path %> |
       <%= link_to_unless_current "Users", users_path %>
+
         <div class = "icons">
             <%= link_to "https://www.twitter.com/dpmidd" do %>
               <%= image_tag("twitterlogo.png", width: "20em") %>
