--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Edit User</h1>
+<div class="container">
 
-<%= render 'form' %>
+  <h1>Edit User</h1>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+    <%= render 'form' %>
+
+    <%= link_to 'Show', @user %> |
+    <%= link_to 'Back', users_path %>
+
+</div>
