--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,7 +13,7 @@
            <tr>
                <td><%= user.first_name %><%= user.last_name %></td>
                <td><%= user.email_address %></td>
-              
+               <td><%= link_to 'Edit', edit_user_path(user)%></td>
            </tr>
          <% end %>
        </tbody>
