--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,8 +11,8 @@
        <tbody>
          <% @users.each do |user| %>
            <tr>
-               <td><%= user.first_name %><%= user.last_name %></td>
-               <td><%= user.email_address %></td>
+               <td><%= link_to user.first_name, user_path(user) %><%= link_to user.last_name, user_path(user) %></td>
+               <td><%= link_to user.email_address, user_path(user) %></td>
                <td><%= link_to 'Edit', edit_user_path(user)%></td>
            </tr>
          <% end %>
