Added destroy button

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,4 +7,8 @@
     <%= link_to 'Show', @user %> |
     <%= link_to 'Back', users_path %>
 
+    <br>  
+
+    <%= link_to 'Destroy', user_path, class: "btn btn-danger", method: :delete %>
+
 </div>
