--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@user) do |f| %>
 
   <div class="First Name">
-    <%= f.label :first_name %><br>
+    <%= f.label :first_name %>
     <%= f.text_field :first_name %>
   </div>
 
@@ -15,4 +15,4 @@
   </div>
       <%= f.submit :class => 'btn btn-primary'%>
 
-  <% end %>
+<% end %>
