--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,9 @@
+
+
 <div class="container">
+
+  <h1><%= @user.first_name %><%= " " %><%= @user.last_name %></h1>
+
 
   <p id="notice"><%= notice %></p>
 
