--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,8 @@
       <%= link_to_unless_current "FAQ", faq_path %> |
       <%= link_to_unless_current "Tasks", tasks_path %> |
       <%= link_to_unless_current "Users", users_path %> |
-  
+      <%= link_to_unless_current "Sign Up", signup_path %>
+
 
 
         <div class = "icons">
