--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,14 +12,11 @@
   <div class="navbar navbar-inverse" role="navigation">
     <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
         <%= link_to "gCamp", root_path, id:"gCamphome" %>
       </div>
+        <div class="navbar-header, text-right">
+          <%= link_to "Sign Up", signup_path %> |
+        </div>
     </div>
   </div>
 
