Got email to display in header but not first name

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,14 +16,16 @@
       </div>
         <div class="navbar-header, text-right">
             <div>
+
   <% if current_user %>
 
+    Hello <%= current_user.first_name %>
+    <%= link_to "Sign Out", signout_path %>
 
-    <%= link_to "Sign Out", signout_path %> |
 
   <% else %>
 
-    <%= link_to "Sign Up", sign_up_path %> |
+    <%= link_to "Sign Up", sign_up_path %>
 
     <%= link_to "Sign In", signin_path %>
 
@@ -44,7 +46,7 @@
       <%= link_to_unless_current "Terms", terms_path %> |
       <%= link_to_unless_current "FAQ", faq_path %> |
       <%= link_to_unless_current "Tasks", tasks_path %> |
-      <%= link_to_unless_current "Users", users_path %> 
+      <%= link_to_unless_current "Users", users_path %>
 
 
         <div class = "icons">
