--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,7 +11,7 @@
 
   <div class="Email">
     <%= f.label :email_address %>
-    <%= f.text_field :email_address %>
+    <%= f.email_field :email_address %>
   </div>
 
       <%= f.submit :class => 'btn btn-primary'%>
