You can sign up and see your name in the navbar and the users name is a link to their profile

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 
   <% if current_user %>
 
-    Hello <%= current_user.first_name %>
+    <%= link_to current_user.first_name, current_user %>
     <%= link_to "Sign Out", signout_path %>
 
 
