added bootstrap formating to well

--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,5 +1,7 @@
-<div class="container, well">
-  Sign Up for gCamp!
+<div class="container">
+    <div class="col-md-offset-4 col-md-4">
+      <div class="well">
+  <h2>Sign Up for gCamp!</h2>
 
 
   <div>
@@ -42,5 +44,6 @@
         <%= submit_tag "Sign Up", :class => 'btn btn-primary'%>
 
   <% end %>
-  </div>
+      </div>
+    </div>
 </div>
