Error messages displaying correctly

--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -38,7 +38,7 @@
 
     <div class="Password Confirmation">
       <%= f.label :password_confirmation %>
-      <%= f.password_field :password, class:"form-control, col-sm-12" %>
+      <%= f.password_field :password_confirmation, class:"form-control, col-sm-12" %>
     </div>
 
     <hr>
