--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -19,7 +19,7 @@
             <td class="form-actions">
               <%= link_to 'Show', task, class: "btn btn-success" %>
               <%= link_to 'Edit', edit_task_path(task), class: "btn btn-primary" %>
-              <%= link_to 'Destroy', task, class: "btn btn-danger", method: :delete %>
+              <%= link_to 'Destroy ', task, class:"btn btn-danger btn-large", method: :delete, data: { confirm: 'Are you sure?' } %>
             </td>
         </tr>
       <% end %>
