--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,8 @@
       <%= link_to_unless_current "Terms", terms_path %> |
       <%= link_to_unless_current "FAQ", faq_path %> |
       <%= link_to_unless_current "Tasks", tasks_path %> |
-      <%= link_to_unless_current "Users", users_path %>
+      <%= link_to_unless_current "Users", users_path %> |
+      <%= link_to_unless_current "Projects", projects_path %>
 
 
         <div class = "icons">
