--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h1>Create Project</h1>
+  <h1>Edit Project</h1>
 </div>
 
 <div class= "form-horizontal">
@@ -7,14 +7,14 @@
 
   <div class="form-group">
     <%= f.label :name, "Name", class: "col-sm-2 control-label" %>
-      <div class="col-sm-5">
+      <div class="col-sm-4">
         <%= f.text_field :name, class: "form-control" %>
       </div>
   </div>
 
   <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-5"> <br>
-      <%= f.submit button_name:"Create Project", class: "btn btn-primary" %>
+    <div class="col-sm-offset-2 col-sm-4"> <br>
+      <%= f.submit button_name:"Update Project", class: "btn btn-primary" %>
     </div>
   </div>
   <%end%>
