--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,27 +1,29 @@
-<div class= "page-header">
-  <div class= "pull-right">
-    <%= link_to 'Create Project', new_project_path, class:"btn btn-primary" %>
+<div class= "container">
+  <div class= "page-header">
+    <div class= "pull-right">
+      <%= link_to 'Create Project', new_project_path, class:"btn btn-primary" %>
+    </div>
+
+    <h1>Projects</h1>
   </div>
 
-  <h1>Projects</h1>
-</div>
 
 
-
-<table class = "table">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @projects.each do |project| %>
+  <table class = "table">
+    <thead>
       <tr>
-        <td><%= link_to project.name, project_path(project) %></td>
-          <td>
+        <th>Name</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @projects.each do |project| %>
+        <tr>
+          <td><%= link_to project.name, project_path(project) %></td>
+            <td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
