--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,9 +1,10 @@
-<div class= "page-header">
-  <div class= "pull-right">
-    
-    <%= link_to 'Edit', edit_project_path(@project), class: "btn btn-info" %>
-    <%= link_to 'Destroy', project_path(@project), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
-  </div>
-
-  <h1><strong><%= @project.name %></strong></h1>
-</div>
+<section class= "container">
+  <header class= "page-header">
+    <p id="notice"><%= notice %></p>
+    <div class="pull-right">
+      <%= link_to 'Edit', edit_project_path(@project), class: "btn btn-info" %>
+      <%= link_to 'Destroy', project_path(@project), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+    </div>
+    <h1><strong><%= @project.name %></strong></h1>
+  </header>
+</section>
