--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="col-md-offset-4 col-md-4">
       <div class="well">
-  <h2>Sign Up for gCamp!</h2>
+  <h2>Register for gCamp!</h2>
 
 
   <div>
@@ -43,7 +43,7 @@
 
     <hr>
 
-        <%= submit_tag "Sign Up", :class => 'btn btn-primary'%>
+        <%= submit_tag "Register", :class => 'btn btn-primary'%>
 
   <% end %>
       </div>
