--- a/app/views/authentications/new.html.erb
+++ b/app/views/authentications/new.html.erb
@@ -2,7 +2,7 @@
     <div class="col-md-offset-4 col-md-4">
       <div class="well">
 
-    <h2>Sign in to gCamp</h2>
+    <h2>Log in to gCamp</h2>
 
       <%= form_tag signin_path do |f| %>
 
@@ -18,7 +18,7 @@
     <hr>
 
     <div>
-      <%= submit_tag "Sign In", :class => 'btn btn-primary'%>
+      <%= submit_tag "Enter", :class => 'btn btn-primary'%>
     </div>
 
   <% end %>
