edit and show pages working

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
   <h1><%= @user.first_name %><%= " " %><%= @user.last_name %></h1>
 
 
-  <p id="notice"><%= notice %></p>
+  <p class="notice"><%= notice %></p>
 
     <p>
       <strong>First name:</strong>
