--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -15,7 +15,7 @@
   </div>
 <% end %>
 
-  <%= form_for @user, url: sign_up_path do |f| %>
+  <%= form_for @user, url: signup_path do |f| %>
 
     <div class="First Name">
       <%= f.label :first_name %>
