--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,29 +1,47 @@
-<%= form_for(@user) do |f| %>
+<div class= "form-horizontal">
+  <%= form_for(@user) do |f| %>
 
-  <div class="First Name">
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %>
+  <div class="form-group">
+    <%= f.label :first_name, "First Name", class: "col-sm-2 control-label" %>
+      <div class="col-sm-5">
+        <%= f.text_field :first_name, class: "form-control" %>
+      </div>
   </div>
 
-  <div class="Last Name">
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %>
-
-  <div class="Email">
-    <%= f.label :email_address %>
-    <%= f.email_field :email_address %>
-  </div>
-
-  <div class="Password">
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-
-  <div class="Password Confirmation">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
+  <div class="form-group">
+    <%= f.label :last_name, "Last Name", class: "col-sm-2 control-label" %>
+      <div class="col-sm-5">
+        <%= f.text_field :last_name, class: "form-control" %>
+      </div>
   </div>
 
 
-      <%= f.submit :class => 'btn btn-primary'%>
+  <div class="form-group">
+      <%= f.label :email, class: "col-sm-2 control-label" %>
+      <div class="col-sm-5">
+          <%= f.email_field :email_address, class: "form-control" %>
+      </div>
+  </div>
 
-<% end %>
+  <div class ="form-group">
+    <%= f.label :password, class: "col-sm-2 control-label" %>
+    <div class="col-sm-5">
+      <%= f.password_field :password, class: "form-control" %>
+    </div>
+  </div>
+
+  <div class ="form-group">
+    <%= f.label :password_confirmation, "Password Confirmation", class: "col-sm-2 control-label" %>
+    <div class="col-sm-5">
+      <%= f.password_field :password_confirmation, class: "form-control" %>
+    </div>
+  </div>
+
+
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-5"> <br>
+      <%= f.submit button_name:"Create User", class: "btn btn-primary" %>
+    </div>
+  </div>
+  <%end%>
+</div>
