--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,15 +1,25 @@
 <%= form_for(@task) do |f| %>
-  <% if @task.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
 
-      <ul>
+  <% if @task.errors !=nil %>
+  <div id="error_explanation">
+    <% @task.errors.full_messages.each do |error| %>
+    <div class="alert alert-danger">
+      <%= error %>
+    </div>
+      <% end %>
+  <% end %>
+
+  <!-- <% if @task.errors.any? %>
+    <div id="error_explanation"> -->
+      <!-- <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2> -->
+
+      <!-- <ul>
       <% @task.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
     </div>
-  <% end %>
+  <% end %> -->
 
   <div class="field form-group">
     <%= f.label :description %><br>
