Fixed bootstrapping of error message for projects

--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -6,13 +6,18 @@
   <div class= "form-horizontal">
     <%= form_for(@project) do |f| %>
 
-    <% if @project.errors !=nil %>
-      <% @project.errors.full_messages.each do |error| %>
-      <div class="alert alert-danger">
-      <%= error %>
+  <% if @project.errors.any? %>
+      <div id="error_explanation" class="form-group">
+        <div class="alert alert-danger col-sm-offset-2 col-sm-4">
+          <h4><%= pluralize(@project.errors.count, "error") %> prohibited this task from being saved:</h4>
+          <ul>
+          <% @project.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
       </div>
-      <% end %>
-    <% end %>
+  <% end %>
 
     <div class="form-group">
       <%= f.label :name, "Name", class: "col-sm-2 control-label" %>
