--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -15,14 +15,14 @@
       <% end %>
 
   <div class="form-group">
-    <%= f.label :first_name, "First Name", class: "col-sm-2 control-label" %>
+    <%= f.label :first_name, "First name", class: "col-sm-2 control-label" %>
       <div class="col-sm-5">
         <%= f.text_field :first_name, class: "form-control" %>
       </div>
   </div>
 
   <div class="form-group">
-    <%= f.label :last_name, "Last Name", class: "col-sm-2 control-label" %>
+    <%= f.label :last_name, "Last name", class: "col-sm-2 control-label" %>
       <div class="col-sm-5">
         <%= f.text_field :last_name, class: "form-control" %>
       </div>
@@ -30,7 +30,7 @@
 
 
   <div class="form-group">
-      <%= f.label :email, class: "col-sm-2 control-label" %>
+      <%= f.label :email_address, class: "col-sm-2 control-label" %>
       <div class="col-sm-5">
           <%= f.email_field :email_address, class: "form-control" %>
       </div>
@@ -44,7 +44,7 @@
   </div>
 
   <div class ="form-group">
-    <%= f.label :password_confirmation, "Password Confirmation", class: "col-sm-2 control-label" %>
+    <%= f.label :password_confirmation, "Password confirmation", class: "col-sm-2 control-label" %>
     <div class="col-sm-5">
       <%= f.password_field :password_confirmation, class: "form-control" %>
     </div>
