--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,7 +13,7 @@
        <tbody>
          <% @users.each do |user| %>
            <tr>
-               <td><%= link_to user.first_name, user_path(user) %><%= link_to user.last_name, user_path(user) %></td>
+               <td><%= link_to user.first_name, user_path(user) %><%= " " %><%= link_to user.last_name, user_path(user) %></td>
                <td><%= link_to user.email_address, user_path(user) %></td>
                <td class="form-actions">
                  <%= link_to 'Show', user, class: "btn btn-success" %>
