--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -2,20 +2,6 @@
   <h1>Edit Project</h1>
 </div>
 
-<div class= "form-horizontal">
-  <%= form_for(@project) do |f| %>
+  <%= render 'form' %>
 
-  <div class="form-group">
-    <%= f.label :name, "Name", class: "col-sm-2 control-label" %>
-      <div class="col-sm-4">
-        <%= f.text_field :name, class: "form-control" %>
-      </div>
-  </div>
-
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-4"> <br>
-      <%= f.submit button_name:"Update Project", class: "btn btn-primary" %>
-    </div>
-  </div>
-  <%end%>
-</div>
+  <%= link_to 'Back', projects_path %>
