--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,18 +1,7 @@
 <div class= "form-horizontal">
   <%= form_for(@user) do |f| %>
-    <% if @user.errors.any? %>
-        <div id="error_explanation" class="form-group">
-          <div class="alert alert-danger col-sm-offset-2 col-sm-4">
-            <h4><%= pluralize(@user.errors.count, "error") %> prohibited this task from being saved:</h4>
 
-            <ul>
-            <% @user.errors.full_messages.each do |message| %>
-              <li><%= message %></li>
-            <% end %>
-            </ul>
-          </div>
-        </div>
-      <% end %>
+<%= render 'errorform/errorform', model: @user %>
 
   <div class="form-group">
     <%= f.label :first_name, "First name", class: "col-sm-2 control-label" %>
