--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,18 +1,6 @@
 <%= form_for(@task, html: {class: "form-horizontal"}) do |f| %>
 
-  <% if @task.errors.any? %>
-    <div id="error_explanation" class="form-group">
-      <div class="alert alert-danger col-sm-offset-1 col-sm-3">
-        <h4><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h4>
-
-        <ul>
-        <% @task.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-        </ul>
-      </div>
-    </div>
-  <% end %>
+  <%= render 'errorform/errorform', model: @task %>
 
   <div class="field form-group">
       <%= f.label :description, :class => 'col-sm-1 control-label' %>
