Did a lot of bug fixing in the links

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -9,5 +9,5 @@
   </header>
 </section>
 
-<%= link_to 'Tasks', project_tasks_path(@project) %>
+<%= link_to 'Tasks', project_tasks_path(@project) %><br>  
 <%= link_to 'Back', projects_path %>
