--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -18,8 +18,8 @@
     <tbody>
       <% @projects.each do |project| %>
         <tr>
-          <td><%= link_to project.name, project_path(project) %>
-          <%= link_to project.tasks.count, project_tasks_path(project) %>
+          <td><%= link_to project.name, project_path(project) %><br>
+          <%= link_to "#{project.tasks.count} tasks", project_tasks_path(project) %>
           </td>
         </tr>
       <% end %>
