--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -11,6 +11,7 @@
     <thead>
       <tr>
         <th>Name</th>
+        <th>Tasks</th>
         <th colspan="3"></th>
       </tr>
     </thead>
@@ -19,7 +20,9 @@
       <% @projects.each do |project| %>
         <tr>
           <td><%= link_to project.name, project_path(project) %><br>
-          <%= link_to "#{project.tasks.count} tasks", project_tasks_path(project) %>
+          </td>
+          <td>
+            <%= link_to "#{project.tasks.count} tasks", project_tasks_path(project) %>
           </td>
         </tr>
       <% end %>
