--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -9,5 +9,9 @@
   </header>
 </section>
 
-<%= link_to @project.tasks.count, project_tasks_path(@project)%><br>  
+<%= link_to_unless_current 'Projects', projects_path(@project) %> >
+<%= link_to_unless_current @project.name, project_path(@project) %> >
+<%= link_to_unless_current 'Tasks', project_tasks_path(@project,@task) %>
+
+<%= link_to @project.tasks.count, project_tasks_path(@project)%><br>
 <%= link_to 'Back', projects_path %>
