--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -22,7 +22,7 @@
           <td><%= link_to project.name, project_path(project) %><br>
           </td>
           <td>
-            <%= link_to "#{project.tasks.count} tasks", project_tasks_path(project) %>
+            <%= link_to "#{project.tasks.count} tasks", project_tasks_path(@project) %>
           </td>
         </tr>
       <% end %>
