Fixed links again on projects show and index and added membership controller and view

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -15,10 +15,12 @@
 <%= link_to_unless_current 'Tasks', project_tasks_path(@project,@task) %>
 </div>
 
-<br>
-
 <div class="container">
 <%= link_to "#{@project.tasks.count} tasks", project_tasks_path(@project)%>
+</div>
+
+<div class="container">
+  <%= link_to "Members",  %>
 </div>
 
 <br>
